@@ -59,12 +59,6 @@
     </system.diagnostics>
     <userSettings>
         <mRemoteNG.My.MySettings>
-            <setting name="MainFormLocation" serializeAs="String">
-                <value>999, 999</value>
-            </setting>
-            <setting name="MainFormSize" serializeAs="String">
-                <value>900, 600</value>
-            </setting>
             <setting name="MainFormState" serializeAs="String">
                 <value>Normal</value>
             </setting>
